# Shark_3_0_Qt

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Shark_UI/: CMakeLists.txt  chat_list_view_screen.cpp  chat_list_view_screen.h  chat_list_view_screen.ui  chatmessagesscreen.cpp  chatmessagesscreen.h  chatmessagesscreen.ui  chatscreen.cpp  chatscreen.h  chatscreen.ui  chatuserdatascreen.cpp  chatuserdatascreen.h  chatuserdatascreen.ui  chooseLogRegScreen.cpp  chooseLogRegScreen.h  chooseLogRegScreen.ui  errorbus.h  exception_login.h  logger.cpp  logger.h  loginScreen.cpp  loginScreen.h  loginScreen.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  message_text_browser.cpp  message_text_browser.h  model_chat.cpp  model_chat.h  model_chat_list.cpp  model_chat_list.h  model_chat_list_delegate.cpp  model_chat_list_itemdelegate.cpp  model_chat_list_itemdelegate.h  model_chat_mess_delegate.cpp  model_chat_mess_delegate.h  model_chat_messages.cpp  model_chat_messages.h  (+44 more)
Shark_UI/exception/: exception_router.h
Shark_UI/images/: resources.qrc
Shark_UI/models/: model_chat_list.cpp  model_chat_list.h  model_chat_mess_delegate.cpp  model_chat_messages.cpp  model_user_list.cpp  model_user_list.h
src/client/: CMakeLists.txt  client.cpp  client.h  client_core.cpp  client_core.h  client_globals.cpp  client_request_executor.cpp  client_request_executor.h  client_session.cpp  client_session.h  client_session_dto_from_cl.cpp  client_session_dto_from_cl.h  client_session_dto_from_srv.cpp  client_session_dto_from_srv.h  client_sql_lite.cpp  client_sql_lite.h
src/client/core/: client_core.cpp  client_core.h
src/client/core/request_dispatcher/: request_dispatcher.cpp  request_dispatcher.h
src/client/core/tcp_transport/: tcp_transport.cpp  tcp_transport.h
src/client/menu/: 0_menu_system.cpp  0_menu_system.h  1_0_entrance_menu.cpp  1_0_entrance_menu.h  1_1_creation.cpp  1_1_creation.h  2_1_new_chat_menu.cpp  2_1_new_chat_menu.h  2_2_chat_list_menu.cpp  2_2_chat_list_menu.h  2_4_user_profile.cpp  2_4_user_profile.h
src/client/processors/: client_session_create_objects.cpp  client_session_create_objects.h  client_session_dto_builder.cpp  client_session_dto_builder.h  client_session_dto_setter.cpp  client_session_dto_setter.h  client_session_dto_writer.cpp  client_session_dto_writer.h  client_session_modify_objects.cpp  client_session_modify_objects.h
src/client/qt_session/: qt_session.cpp  qt_session.h
src/client/request_dispatcher/: request_dispatcher.cpp
src/client/tcp_transport/: tcp_transport.cpp  tcp_transport.h
src/core/chat/: chat.cpp  chat.h
src/core/chat_system/: chat_system.cpp  chat_system.h
src/core/message/: message.cpp  message.h
src/core/system/: date_time_utils.cpp  date_time_utils.h  logger.cpp  logger.h  safe_socket.h  serialize.cpp  system_function.cpp  system_function.h  weak_map.h
src/core/user/: user.cpp  user.h  user_chat_list.cpp  user_chat_list.h
src/dto/: CMakeLists.txt  dto_struct.h
src/server/: 0_init_system.cpp  0_init_system.h  CMakeLists.txt  init_sql_requests.h  postgres_db.cpp  server.cpp  server_session.cpp  server_session.h  sql_server.cpp  sql_server.h
src/server/processors/: user_account_update_processor.cpp  user_account_update_processor.h  user_ban_block_processor.cpp  user_ban_block_processor.h  user_data_query_processor.cpp  user_data_query_processor.h  user_database_init_processor.cpp  user_database_init_processor.h  user_object_creation_processor.cpp  user_object_creation_processor.h  user_registration_processor.cpp  user_registration_processor.h
src/server/session_transport/: session_transport.cpp  session_transport.h
src/server/sql_queries/: chat_sql_reader.h  chat_sql_writer.h  database_sql_manager.h  message_sql_writer.h  user_sql_reader.cpp  user_sql_reader.h  user_sql_writer.cpp  user_sql_writer.h
